force-app/main/default/objects/OrgSummary__c/OrgSummary__c.object-meta.xml
<CustomObject>
    <label>OrgSummary</label>
    <nameField>
        <label>OrgSummary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgSummaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>