force-app/main/default/objects/OrgSummary__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code</label>
    <referenceTo>CodeSummary__c</referenceTo>
    <relationshipLabel>OrgSummaries</relationshipLabel>
    <relationshipName>OrgSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>