force-app/main/default/objects/OrgSummary__c/fields/DateOfSummary__c.field-meta.xml
<CustomField>
    <fullName>DateOfSummary__c</fullName>
    <label>DateOfSummary</label>
    <type>DateTime</type>
</CustomField>