force-app/main/default/objects/OrgSummary__c/fields/HealthCheck__c.field-meta.xml
<CustomField>
    <fullName>HealthCheck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthCheck</label>
    <referenceTo>HealthCheckSummary__c</referenceTo>
    <relationshipLabel>OrgSummaries</relationshipLabel>
    <relationshipName>OrgSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>