force-app/main/default/objects/OrgSummary__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ORG-{ID}-SUM-{User}:{TIMESTAMP}</description>
    <externalId>true</externalId>
    <label>Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>