force-app/main/default/objects/OrgSummary__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limits</label>
    <referenceTo>LimitsSummary__c</referenceTo>
    <relationshipLabel>OrgSummaries</relationshipLabel>
    <relationshipName>OrgSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>