force-app/main/default/objects/OrgSummary__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metadata</label>
    <referenceTo>MetadataSummary__c</referenceTo>
    <relationshipLabel>OrgSummaries</relationshipLabel>
    <relationshipName>OrgSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>