force-app/main/default/objects/OrgSummary__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>OrgId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>