force-app/main/default/objects/OrgSummary__c/fields/OrgInstanceURL__c.field-meta.xml
<CustomField>
    <fullName>OrgInstanceURL__c</fullName>
    <label>OrgInstanceURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>