force-app/main/default/objects/OrgSummary__c/fields/Tests__c.field-meta.xml
<CustomField>
    <fullName>Tests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tests</label>
    <referenceTo>TestsSummary__c</referenceTo>
    <relationshipLabel>OrgSummaries</relationshipLabel>
    <relationshipName>OrgSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>