force-app/main/default/objects/OrgSummary__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>